[tool.poetry]
name = 'docopt-ng'
version = '0.7.2'
description = 'Docopt is a Pythonic command-line interface parser that will make you smile.'
authors = ['skeptycal <26148512+skeptycal@users.noreply.github.com>']
license = 'MIT'

[tool.poetry.dependencies]
python = '^3.6'


[tool.poetry.dev-dependencies]
pylint = '^2.5.3'
pytest = '^5.4.3'
pytest-cov = '^2.10.0'
flake8 = '^3.8.3'
tox = '^3.17.1'
pytest-mypy = '^0.6.2'
codecov = '^2.1.8'
wheel = '^0.34.2'
setuptools = '^49.2.0'

[build-system]
requires = ['setuptools', 'wheel', 'poetry>=0.12']
build-backend = 'poetry.masonry.api'
